<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/a1"
        android:contentDescription="@string/screen" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:context=".MainActivity"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_a"
                android:textSize="30sp"
                android:textColor="#000000"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"

                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/team_a_score"
                android:gravity="center"
                android:layout_width="match_parent"
                android:textSize="56sp"
                android:paddingBottom="24dp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-medium"
                android:text="@string/_0"
                android:layout_height="wrap_content"
                tools:targetApi="jelly_bean" />
            <Button
                android:id="@+id/pointer3button"
                android:layout_width="match_parent"
                android:text="@string/_3_points"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingBottom="8dp"
                android:textAllCaps="true"
                android:layout_height="wrap_content"
                android:onClick="threePointer"/>
            <Button
                android:id="@+id/pointer2button"
                android:layout_width="match_parent"
                android:text="@string/_2_points"
                android:textAllCaps="true"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingBottom="8dp"
                android:onClick="twoPointer"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/free_button"
                android:layout_width="match_parent"
                android:text="@string/free_throw"
                android:textAllCaps="true"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:onClick="freeThrow"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_b"
                android:textSize="30sp"
                android:textColor="#000000"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/team_b_score"
                android:gravity="center"
                android:layout_width="match_parent"
                android:textSize="56sp"
                android:textColor="#000000"
                android:paddingBottom="24dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/_0"
                android:layout_height="wrap_content"
                tools:targetApi="jelly_bean" />
            <Button
                android:id="@+id/pointer3b_button"
                android:layout_width="match_parent"
                android:text="@string/_3_points"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingBottom="8dp"
                android:textAllCaps="true"
                android:layout_height="wrap_content"
                android:onClick="threePointer_B"/>
            <Button
                android:id="@+id/pointer2b_button"
                android:layout_width="match_parent"
                android:text="@string/_2_points"
                android:textAllCaps="true"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingBottom="8dp"
                android:onClick="twoPointer_B"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/free_b_button"
                android:layout_width="match_parent"
                android:text="@string/free_throw"
                android:textAllCaps="true"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:onClick="freeThrow_B"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:onClick="reset"
        android:text="@string/reset"
        android:textColor="#000000"
        android:textSize="30sp" />
</RelativeLayout>